<resources>
    <string name="app_name">JournalApp</string>

    <string name="title_home">Today</string>
    <string name="title_dashboard">History</string>
    <string name="title_notifications">Accounts</string>

    <string name="add_picture">Change Color:</string>

    <!-- Facebook stuff -->
    <string name="facebook_app_id">496765680719671</string>
    <string name="fb_login_protocol_scheme">fb496765680719671</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_register">Register</string>
    <string name="action_sign_up">New User? Sign Up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings Related to notifications -->
    <string name="title">Daily Journal</string>
    <string name="time">It is time to journal!</string>

    <!-- Strings Related to Account -->
    <string name="logout">Logout</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>

    <!-- Strings Related to Today -->
    <string name="TypeHere">Type here....</string>

    <!-- Strings Related to Notification-->
    <string name="journal_notification">Its time to journal!</string>
    <string name="notification_title">Take a look</string>

</resources>
