<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.robertchung.journalapp.RegisterActivity">
    
    
    <EditText
        android:id="@+id/emailRegisterEditTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passwordRegisterEditTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailRegisterEditTextView" />

    <EditText
        android:id="@+id/confirmPasswordRegisterEditTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordRegisterEditTextView" />

    <TextView
        android:id="@+id/confirmPasswordPromptTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prompt_confirm_password"
        app:layout_constraintBottom_toTopOf="@+id/confirmPasswordRegisterEditTextView"
        app:layout_constraintStart_toStartOf="@+id/confirmPasswordRegisterEditTextView" />

    <TextView
        android:id="@+id/passwordPromptTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prompt_password"
        app:layout_constraintBottom_toTopOf="@+id/passwordRegisterEditTextView"
        app:layout_constraintStart_toStartOf="@+id/passwordRegisterEditTextView" />
    
    <TextView
        android:id="@+id/emailPromptTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prompt_email"
        app:layout_constraintBottom_toTopOf="@+id/emailRegisterEditTextView"
        app:layout_constraintStart_toStartOf="@+id/emailRegisterEditTextView" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="215dp"
        android:layout_height="43dp"
        android:layout_marginTop="32dp"
        android:background="@color/cardview_dark_background"
        android:text="@string/action_register"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordRegisterEditTextView" />

    <TextView
        android:id="@+id/back_to_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/action_sign_in_short"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>
